# my_lerobot_ros

./: .buildinfo  README.md  README_old.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/documentation/: adapting.doctree  cartesian_velocity.doctree  faq.doctree  gamepad_6dof.doctree  install.doctree  joint_position.doctree  movegroup_follow_joint_trajectory.doctree  movegroup_servo_jog.doctree  movegroup_servo_pose.doctree  movegroup_servo_twist.doctree  overview.doctree  references.doctree  teachbot.doctree  ur.doctree
_sources/documentation/: faq.md.txt  joint_position.md.txt  movegroup_servo_pose.md.txt  references.md.txt  teachbot.md.txt
documentation/: adapting.html  cartesian_velocity.html  conf.py  faq.html  gamepad_6dof.html  index.rst  install.html  joint_position.html  movegroup_follow_joint_trajectory.html  movegroup_servo_jog.html  movegroup_servo_pose.html  movegroup_servo_twist.html  overview.html  references.html  teachbot.html  ur.html
documentation/documentation/: cartesian_velocity.md  gamepad_6dof.md  install.md  joint_position.md  movegroup_follow_joint_trajectory.md  movegroup_servo_jog.md  movegroup_servo_pose.md  movegroup_servo_twist.md  overview.md  ur.md
lerobot-robot-ur/: README.md  pyproject.toml
lerobot-robot-ur/lerobot_robot_ur/: config_ur.py  movegroup_follow_joint_trajectory.py  movegroup_servo_jog.py  movegroup_servo_pose.py  movegroup_servo_twist.py  native_joint_position_control.py  ros_interface.py  ros_interface_ur.py  ur.py
lerobot-teleoperator-devices/: pyproject.toml
lerobot-teleoperator-devices/lerobot_teleoperator_devices/: __init__.py  gamepad_6dof.py  gamepad_6dof_utils.py
lerobot-teleoperator-teachbot/: pyproject.toml
lerobot-teleoperator-teachbot/lerobot_teleoperator_teachbot/: __init__.py  config_teachbot.py  ros_interface.py  ros_interface_teachbot.py  teachbot.py
lerobot_robot_ros.old/lerobot_robot_ros/: __init__.py  config.py  robot.py
lerobot_robot_ros/lerobot_robot_ros/: __init__.py
lerobot_robot_ur5_ros/: README.md  pyproject.toml
lerobot_robot_ur5_ros/lerobot_robot_ur5_ros/: __init__.py  config.py  robot.py
lerobot_teleoperator_devices/: pyproject.toml
lerobot_teleoperator_devices/lerobot_teleoperator_devices/: __init__.py  config_teachbot_joint_state.py  teachbot_joint_state.py
lerobot_teleoperator_twist/: README.md
scripts/: record.bash  teleoperate.bash
