[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_devices"
version = "0.0.4"
description = "🤗 Teleoperators for lerobot"
readme = "README.md"
authors = [
  { name = "Yifei Cheng", email = "ycheng517@gmail.com" },
  { name = "Gerard Harkema", email = "GerardAnneHarkema@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "teleop",
  "lerobot>=0.4",
  "pygame",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_devices*"]
exclude = ["*.egg-info"]


