[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_teachbot"
version = "0.0.2"
description = "LeRobot teachbot integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gerard Harkema", email = "GerardAnneHarkema@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "teleop",
  "lerobot>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_teachbot*"]
exclude = ["*.egg-info"]
