# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "lerobot-robot-ur5-ros"
version = "0.1.0"
description = "LeRobot plugin for Universal Robots UR5 with ROS2."
authors = [
    { name = "Your Name", email = "your@email.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.4.0,<0.5.0",
    "rclpy",
]

[project.entry-points."lerobot.robots"]
ur5_ros = "lerobot_robot_ur5_ros:UR5ROS"
